# textsynth

./: .gitignore  Cargo.toml  README.md
examples/: common.rs  log_probabilities.rs  streaming_text_completions.rs  text_completions.rs
src/: core.rs  error.rs  lib.rs  prelude.rs  utils.rs
src/engine/: definition.rs  log_probabilities.rs  mod.rs  text_completion.rs
src/test_utils/: cache.rs  dotenv.rs  mod.rs  text_synth.rs
