[package]
name = "textsynth"
version = "0.1.0"
edition = "2021"
description = "A (unofficial) wrapper for the TextSynth API, a text synthesization service."
license = "MIT"
repository = "https://github.com/ALinuxPerson/textsynth"
keywords = ["api", "textsynth", "machine-learning", "synthesis"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", features = ["serde"] }
bounded-integer = { version = "0.5.1", features = ["serde", "types"] }
bytes = "1.1.0"
futures = "0.3.19"
once_cell = "1.9.0"
reqwest = { version = "0.11.9", features = ["json", "stream"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
tap = "1.0.1"

[lib]
doctest = false

[features]
serde_derives = []

[dev-dependencies]
anyhow = "1.0.52"
dotenv = "0.15.0"
parking_lot = "0.11.2"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
